test/integration/bad/lang/bad_bounds5.stan
parameters {
   real<offset=1><lower=0>
}